# hg-mcp

./: .hgtags  DEVELOPMENT.md  README.md  pyproject.toml
hg_mcp/: main.py
scripts/: time-test-overhead.sh
tests/: __init__.py  conftest.py  test_core_tools.py  test_extension_tools.py  test_extensions_available.py
