[tool.poetry]
name = "hg-mcp"
version = "0.2.1"
description = "MCP server for Mercurial repository interaction"
authors = ["Chaiwat Suttipongsakul <cwt@bashell.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cwt/hg-mcp"
repository = "https://github.com/cwt/hg-mcp"
keywords = ["mcp", "mercurial", "hg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
mcp = {extras = ["cli"], version = "^1.2.0"}
uvloop = {version = "^0.22.1", optional = true, markers = "sys_platform != 'win32'"}
winloop = {version = "^0.5.0", optional = true, markers = "sys_platform == 'win32'"}

[tool.poetry.extras]
speed = ["uvloop", "winloop"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.6.0"
mypy = "^1.15.0"

[tool.poetry.scripts]
hg-mcp = "hg_mcp.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
