[tool.poetry]
name = "hg-mcp"
version = "0.6.1"
description = "MCP server for Mercurial repository interaction"
authors = ["Chaiwat Suttipongsakul <cwt@bashell.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cwt/hg-mcp"
repository = "https://github.com/cwt/hg-mcp"
keywords = ["mcp", "mercurial", "hg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.26.0"
uvloop = {version = "^0.22.1", optional = true, markers = "sys_platform != 'win32'"}
winloop = {version = "^0.5.0", optional = true, markers = "sys_platform == 'win32'"}
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"

[tool.poetry.extras]
speed = ["uvloop", "winloop"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
black = "^26.3.1"
ruff = "^0.15.6"
mypy = "^1.19.1"

[tool.poetry.scripts]
hg-mcp = "hg_mcp.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

# Note: DeprecationWarnings suppressed due to pytest-asyncio using asyncio APIs
# deprecated in Python 3.14+. This is a known issue upstream:
# https://github.com/pytest-dev/pytest-asyncio/issues/713
# The warnings are harmless and will be fixed in a future pytest-asyncio release.
addopts = "-v --tb=short -W ignore::DeprecationWarning"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
